# shangtugongfang

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md
backend/: Dockerfile  pyproject.toml  shangtugongfang.db  test.db
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: deps.py  routes_admin.py  routes_auth.py  routes_credits.py  routes_health.py  routes_jobs.py  routes_pricing.py  routes_products.py  routes_prompt_drafts.py  routes_system.py
backend/app/core/: config.py
backend/app/db/: bootstrap.py  session.py
backend/app/models/: __init__.py  audit.py  base.py  billing.py  job.py  product.py  prompt.py  user.py  workspace.py
backend/app/providers/: matting_provider.py  openai_provider.py
backend/app/schemas/: auth.py  billing.py  common.py  job.py  pricing.py  product.py  prompt.py  workspace.py
backend/app/services/: billing.py  security.py
backend/app/workers/: celery_app.py
backend/tests/: conftest.py  test_api_flow.py  test_billing.py  test_bootstrap.py
deploy/: docker-compose.yml
deploy/nginx/: default.conf
deploy/scripts/: deploy.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  auth.test.ts  auth.ts
frontend/src/services/: api.ts
frontend/src/styles/: index.css
